src/test/deca/syntax/valid/parser/oracle/sum_expr_second_deriv.deca
{
	5.0 + 2; 5 + 2 + --"Hello World !"; 50.0 + 5 + --(x + 50);
}