src/test/deca/syntax/invalid/test_dir/added/parser/println_two_expr_without_comma.deca
{
	println("Hello World !" 2);
}
